# Smart_Farm

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  smart_farm.xmind
components/hardware/: 74hc595.c  CMakeLists.txt
components/hardware/include/: 74hc595.h
components/hardware/src/: 74hc595.c
main/: CMakeLists.txt  main.c  user_esp32_hardware.c  user_esp32_i2c.c  user_esp32_modbus.c  user_esp32_mqtt.c  user_esp32_ota.c  user_esp32_pwm.c  user_esp32_rmt.c  user_esp32_uart.c  user_esp32_wifi.c
main/include/: user_esp32_hardware.h  user_esp32_i2c.h  user_esp32_modbus.h  user_esp32_mqtt.h  user_esp32_ota.h  user_esp32_pwm.h  user_esp32_rmt.h  user_esp32_uart.h  user_esp32_wifi.h  user_freertos_config.h
server_certs/: ota_ca_cert.pem
